@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST libxfcegui4-4.5.92.tar.bz2 653354 RMD160 b8ada2f07acc57ad56f1250ac65e50e3b535d5b1 SHA1 c423f2c8fe09595926b5b4e24feed635a89e2433 SHA256 5fd60859578bad5241dbb990d7e4515caf89215e866d57dd4286989efcc97c5d
-EBUILD libxfcegui4-4.5.92.ebuild 619 RMD160 9e5006aa1a489f63f2ad6e156ecd9fd232cc7611 SHA1 fecd9f896a2afb5423172902ba5869b8edaafa81 SHA256 6b133b3f9696b3c2d024c7df97113eceec7cb4ea6128fe4779385458f0e1d09d
-EBUILD libxfcegui4-9999.ebuild 619 RMD160 9e5006aa1a489f63f2ad6e156ecd9fd232cc7611 SHA1 fecd9f896a2afb5423172902ba5869b8edaafa81 SHA256 6b133b3f9696b3c2d024c7df97113eceec7cb4ea6128fe4779385458f0e1d09d
-MISC ChangeLog 464 RMD160 84eb923c385d0cc1bdadae27805ba7230deecfe2 SHA1 88f9d23eaf0958b301ddf0776c6e4187652aa5a4 SHA256 f79ee3e37edda5f713e9a41facc589a8d4a8ccdec28c0bc1c2aa3b2daae6f6c9
+EBUILD libxfcegui4-4.5.92.ebuild 749 RMD160 de212ec87f12b4d219f554ee8f4351af538d69c5 SHA1 eaa4fb0b77d39d42785be30271d6ba8d67d45430 SHA256 62fe4ec969691bfc9b0b9f67a145c7adfc11cfc0fbe78e365e52d89ca2fdb435
+EBUILD libxfcegui4-9999.ebuild 771 RMD160 b64b28e9ffa693c40bb994bdc2c6731afde37380 SHA1 65792a1a797db91e841940448bb633daeb548be5 SHA256 62a6c0fd9a70ec5f117bb33a87b8420f6261a86f2c28b1fe27967d2e8821bd05
+MISC ChangeLog 587 RMD160 53b3c954d1c067b2e83c359fe1563c5ebf855558 SHA1 0ef743c42db16781dd97a53f30135a222e867734 SHA256 e848c84c2e7f6ae489b5c3830582fac110469311c3ff2a06f4731b61009ac277
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtiIACgkQKhnDs22gwa9jVgCg6z+YIAGgEn5CV8z2LoiQI66E
-PMsAoIE7PJLP2sxdVGUzLV5HgpuzlnJr
-=/lSi
+iEYEARECAAYFAklK3ZYACgkQKhnDs22gwa8VVwCg5cqm04RxmYGHN9YBzC+tsW/M
+AMYAoIhnRuupzToUzGrSsR/EOLIhcCZ7
+=Lb6c
 -----END PGP SIGNATURE-----
