@@ -11,7 +11,7 @@ xfce4_core
 DESCRIPTION="Unified widgets library"
 HOMEPAGE="http://www.xfce.org/projects/libraries"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
-IUSE="debug startup-notification"
+IUSE="debug doc startup-notification"
 
 RDEPEND="gnome-base/libglade
 	x11-libs/libSM
@@ -20,5 +20,14 @@ RDEPEND="gnome-base/libglade
 	>=xfce-base/libxfce4util-${XFCE_VERSION}
 	>=xfce-base/xfconf-${XFCE_VERSION}
 	startup-notification? ( x11-libs/startup-notification )"
+DEPEND="${RDEPEND}
+	dev-util/intltool
+	doc? ( dev-util/gtk-doc )"
+
+WANT_GTKDOCIZE="yes"
+
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable doc gtk-doc)"
+}
 
 DOCS="AUTHORS ChangeLog NEWS README TODO"
