@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  libxfcegui4-4.5.92.ebuild, libxfcegui4-9999.ebuild:
+  Added USE=doc
+
 *libxfcegui4-4.5.92 (14 Nov 2008)
 
   14 Nov 2008; Christoph Mende <angelos@gentoo.org>
